tests/ui/attributes/invalid-repr.stderr
error: the `repr(align(...))` attribute cannot be used on type aliases
  --> $DIR/invalid-repr.rs:1:3
   |
LL | #[repr(align(16))]
   |   ^^^^^^^^^^^^^^^
   |
   = help: the `repr(align(...))` attribute can only be applied to data types

error: aborting due to 1 previous error

